# MegumiC

./: .gitignore  CMakeLists.txt  CNAME  Makefile  README.md  index.html  mc.js  mc.wasm  run.sh
.github/workflows/: cmake.yml  deploy-demo.yml
demo/: build.sh
djx/: back_main.cpp  back_main.hpp
include/: config.hpp
include/assembly/: asm.hpp  context.hpp  generate.hpp  irt.hpp
include/ast/: ast.hpp  generate.hpp
include/ir/: context.hpp  generate.hpp  ir.hpp
include/optimizer/: asmcode.hpp  generate.hpp  opt.hpp  peephole.hpp
src/: CMakeLists.txt  ast.hpp  config.cpp  main.cpp
src/assembly/: asm.cpp  context.cpp  generate.cpp  irt.cpp
src/ast/: CMakeLists.txt  ast.cpp  ast.hpp  generate.cpp  generate.hpp
src/ir/: CMakeLists.txt  context.cpp  eval.cpp  generate.cpp  generate.hpp  generate_ir.cpp  ir.cpp  ir.hpp
src/lex/: megumic.l
src/optimizer/: asmcode.cpp  generate.cpp  opt.cpp  peephole.cpp
src/parser/: megumic.l  megumic.y
src/yac/: megumic.y
test/: README.md  pre.c  report.md  sc.cpp  task0.c  task1.c  task1.cpp  task2.c  task2.cpp  task3.c  task3.cpp  task4.c  task5.c  task6.c  wrong.s
zriscv/: hello.S  hello.ir
